Fix contrast for links in dark mode.

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -19,7 +19,9 @@
 
 @layer components {
     .link {
-        @apply underline text-orange-600 hover:text-orange-800 dark:text-orange-600 dark:hover:text-orange-300;
+        @apply underline
+        text-orange-600 hover:text-orange-800
+        dark:text-orange-400 dark:hover:text-orange-300;
     }
 
     .button-base {
